# manprosi-backend

./: .gitignore  Cargo.toml  Secrets.toml  database.sqlite
src/: db.rs  main.rs  seeder.rs
src/handlers/: auth.rs  automation.rs  automation_history.rs  land.rs  mod.rs  notification.rs  pest_control.rs  plant.rs  pump.rs  recommendation.rs  seed.rs  sensor.rs  sensor_history.rs  user.rs  valve.rs
src/models/: automation.rs  automation_history.rs  land.rs  mod.rs  notification.rs  pest_control.rs  plant.rs  pump.rs  recommendation.rs  seed.rs  sensor.rs  sensor_history.rs  user.rs  user_role.rs  valve.rs
