[package]
name = "second"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bcrypt = "0.17.1"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.17", features = ["runtime-actix-native-tls", "sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-identity = "0.7"
actix-cors = "0.7"
chrono = "0.4.42"
