[package]
name = "second"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0" # Gunakan versi stabil yang didukung Shuttle
actix-cors = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] } # Update version jika perlu
actix-identity = "0.8" # Update version
bcrypt = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# --- PERUBAHAN PENTING ---

# 1. Hapus dotenvy (Shuttle pakai Secrets.toml)
# dotenvy = "0.15.7" <--- HAPUS INI

# 2. Ubah fitur sea-orm dari sqlite ke postgres
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }

# 3. Tambahkan library khusus Shuttle
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sea-orm"] }