[package]
name = "second"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-identity = "0.8"
bcrypt = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# --- UPDATE VERSI SHUTTLE KE 0.50.0 ---
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }

shuttle-actix-web = "0.50.0"
shuttle-runtime = "0.50.0"
shuttle-shared-db = { version = "0.50.0", features = ["postgres", "sea-orm"] }